<resources>
    <string name="app_name">eSwaraj</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginButtonText">Login with Facebook</string>
    <string name="skipButtonText">Skip</string>
    <string name="quitButtonText">Quit</string>
    <string name="gotItButtonText">Got It!</string>
    <string name="getDataError">Network Error. Could not fetch data</string>
    <string name="facebook_app_id">292853217568902</string>
    <string name="title_activity_select_amenity">SelectAmenityActivity</string>
    <string name="title_activity_youtube">YoutubeActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_select_template">SelectTemplateActivity</string>
    <string name="title_activity_add_details">AddDetailsActivity</string>
    <string name="title_activity_mark_location">MarkLocationActivity</string>
    <string name="title_activity_complaint_summary">ComplaintSummaryActivity</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_my_complaints">MyComplaintsActivity</string>
    <string name="title_activity_single_complaint">SingleComplaintActivity</string>
    <string name="search_hint">Location/Leader</string>
    <string-array name="splash_text">
        <item>Select an issue in your locality that\'s bugging you for a while</item>
        <item>Post picture and submit your issue to know about your location MLA</item>
        <item>View overall and constituency level analytics on the existing civic amenity issues </item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_login_dialog">LoginDialogActivity</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_constituency">ConstituencyActivity</string>
    <string name="title_activity_leader">LeaderActivity</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="title_activity_complaint_filter">ComplaintFilterActivity</string>
    <string name="title_activity_constituency_snapshot">ConstituencySnapshotActivity</string>
    <string name="title_activity_user_snapshot">UserSnapshotActivity</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_leader_list">LeaderListActivity</string>
    <string name="title_activity_location_list">LocationListActivity</string>
    <string name="title_activity_mark_home">MarkHomeActivity</string>
    <string name="title_activity_place_search">PlaceSearchActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_promises_list">PromisesListActivity</string>
    <string name="title_activity_single_promise">SinglePromiseActivity</string>
    <string name="title_activity_document">DocumentActivity</string>
    <string name="title_activity_constituency_timeline">ConstituencyTimelineActivity</string>
    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="auVersion">Version 1.3.0</string>
    <string name="auMediaPartners">Media Partners</string>
    <string name="cfCitizenServices">Filter by Citizen Services</string>
    <string name="cfComplaintStatus">Filter by Complaint Status</string>
    <string name="cfApplyFilter">Apply Filter</string>
    <string name="cfRemoveAll">Remove All</string>
    <string name="mhSaveLocation">Save Location</string>
    <string name="mhSkip">Skip</string>
    <string name="enterLocationHint">Enter Your Location ...</string>
    <string name="mcNoComplaints">No Complaints to show yet. \nRaise a complaint like the one below and contribute towards good governance.</string>
    <string name="mcComplaintID">#84801</string>
    <string name="mcTime">8 hours ago</string>
    <string name="mcIssue">Leaking Water Pipes</string>
    <string name="mcIssueDescription">Gallons of water leaking everyday.</string>
    <string name="mcUser1a">Rakesh Singh</string>
    <string name="mcUser1b">Vaibhav Sinha</string>
    <string name="mcNoAffected">and 80 more affected</string>
    <string name="mcIssueLocation">Govind Vihar, Delhi</string>
    <string name="mcComments">Comments</string>
    <string name="mcStatus">Pending</string>
    <string name="mcAmenity">Water</string>
    <string name="mcUser2">Rakesh Singh</string>
    <string name="mcTime2">7 hours ago</string>
    <string name="mcIssueDesc2">Leaking water pipes in Govind Vihar area. \n Please address this issue. </string>
    <string name="mcUser3">Anonymous</string>
    <string name="mcTime3">3 Hours Ago</string>
    <string name="mcIssueDesc3">Comment text</string>
    <string name="mcShowMore">Show More</string>
    <string name="leaveACommentHint">Leave a Comment</string>
    <string name="searchHint">Search</string>
    <string name="noMatchFound">No matches found</string>
    <string name="reporterName">Aam Aadmi</string>
    <string name="reporterAge">25 Yrs, Male</string>
    <string name="notAvailableMessage">Sorry we are not available at your location yet!</string>
    <string name="close">Close</string>
    <string name="viewAllComplaints">View all complaints</string>
    <string name="adAmenityTypeLabel">Amenity Type</string>
    <string name="adAmenity">Water</string>
    <string name="adIssueLabel">My Issue</string>
    <string name="adIssueType">No Water at home</string>
    <string name="adDescLabel">Description</string>
    <string name="adEnterDescLabel">(Please enter a brief description of the issue)</string>
    <string name="adAddDescLabel">Add Description</string>
    <string name="adPostAnon">Post Anonymously</string>
    <string name="adPost">Post</string>
    <string name="abNoOfComplaints">%d complaints</string>
    <string name="abSelect">Select</string>
    <string name="abAmenityNameLabel">Amenity_Name</string>
    <string name="abRelatedIssue">related issue</string>
    <string name="abIssues">%d   issues</string>
    <string name="fcShowMore">Show More</string>
    <string name="fclNoComplaints">No complaints to show yet</string>
    <string name="fcsIssueDetails">Issue Details</string>
    <string name="fcsCitizenServiceLabel">Citizen Service</string>
    <string name="fcsAmenity">Water</string>
    <string name="fcsIssueNameLabel">Issue Name</string>
    <string name="fcsIssueType">Leaking Water Pipes</string>
    <string name="fcsReportedFromLabel">Issue Reported From</string>
    <string name="fcsLocation">Govind Vihar, Delhi</string>
    <string name="fcsIssueDescLabel">Issue Description</string>
    <string name="fcsIssueDesc">Too much problem</string>
    <string name="fcsNewComplaint">New Complaint</string>
    <string name="fcsDone">Done</string>
    <string name="csoComplaintSuccessful">Complaint Successful</string>
    <string name="csoThankYouMessage">Thank you for using eSwaraj. Together we deliver Governance, Sabka Saath Sabka Vikas.</string>
    <string name="csoSavedMessage">\nYour complaint is saved.\nNext time when you are connected to internet,\nit will be sent to server.</string>
    <string name="ciHousesLabel">Total Houses</string>
    <string name="ciHousesVal">Unknown</string>
    <string name="ciPopulationLabel">Total Population</string>
    <string name="ciPopulationVal">Unknown</string>
    <string name="ciMalePopLabel">Total Male Population</string>
    <string name="ciMalePopVal">Unknown</string>
    <string name="ciFemalePopLabel">Total Female Population</string>
    <string name="ciFemalePop">Unknown</string>
    <string name="ciLiteratePopLabel">Total Literate Population</string>
    <string name="ciLiteratePopVal">Unknown</string>
    <string name="ciMaleLiterateLabel">Total Male Literate Population</string>
    <string name="ciMaleLiterateVal">Unknown</string>
    <string name="ciFemaleLiterateLabel">Total Female Literate Population</string>
    <string name="ciFemaleLiterateVal">Unknown</string>
    <string name="ciWorkingPopLabel">Total Working Population</string>
    <string name="ciWorkingPopVal">Unknown</string>
    <string name="ciMaleWorkingPopLabel">Total Male Working Population</string>
    <string name="ciMaleWorkingPopVal">Unknown</string>
    <string name="ciFemaleWorkingPopLabel">Total Female Working Population</string>
    <string name="ciFemaleWorkingPopVal">Unknown</string>
    <string name="ciAreaLabel">Area</string>
    <string name="ciAreaVal">Unknown</string>
    <string name="ciPerimeterLabel">Perimeter</string>
    <string name="ciPerimeterVal">Unknown</string>
    <string name="heatMap">Heatmap</string>
    <string name="cluster">Cluster</string>
    <string name="markers">Markers</string>
    <string name="knowMoreAbt">Know More about Civic Amenities</string>
    <string name="videos">Videos</string>
    <string name="leaderName">Ravi Sharma</string>
    <string name="separator">|</string>
    <string name="leaderDesignation">PM, India</string>
    <string name="thankyouMessageFromLeader">Thank you for using eSwaraj. \nTogether we deliver Governance, Sabka Saath Sabka Vikas.</string>
    <string name="serviceUnavailable">Our service is not available in your location yet.</string>
    <string name="skipLogin">Skip login</string>
    <string name="loginToProceed">You need to login to perform this activity</string>
    <string name="retry">Retry</string>
    <string name="changeProfilePic">Change Profile Pic</string>
    <string name="fmpNameLabel">Name</string>
    <string name="fmpName">Aam Aadmi</string>
    <string name="fmpEdit">Edit</string>
    <string name="fmpEmailIdLabel">Email</string>
    <string name="fmpEmailId">AamAadmi@gov.nic.in</string>
    <string name="fmpVoterIdLabel">Voter Id</string>
    <string name="fmpVoterId">Ex. DEL778956IN</string>
    <string name="fmpLocationLabel">My Location</string>
    <string name="fmpLocation">Govind Vihar, Delhi</string>
    <string name="fmpPoliticalCoordinates">My Political Coordinates</string>
    <string name="fmpACLabel">Assembly Constituency</string>
    <string name="fmpAC">Chandni Chowk</string>
    <string name="fmpPCLabel">Parliamentary Constituency</string>
    <string name="fmpPC">Old Delhi</string>
    <string name="fmpWardLabel">Ward</string>
    <string name="fmpWard">Vikram Nagar</string>
    <string name="fmpSave">Save</string>
    <string name="fmpCancel">Cancel</string>
    <string name="fmpLogOut">Log Out</string>
    <string name="noPromisesToShow">No promises to show</string>
    <string name="fscseparator">#</string>
    <string name="comments">Comments</string>
    <string name="complaintStatus">Pending</string>
    <string name="closeComplaint">Close Complaint</string>
    <string name="abouteSwaraj">eSwaraj : Banking on the new age revolution #DigitalIndia"</string>
    <string name="tagLine">Making good governance a peoples movement</string>
    <string name="staffMemberName">Ravi Sharma</string>
    <string name="staffMemberPosition">JE, Area1, Timarpur</string>
    <string name="staffMemberPositionDetailed">JE, Area1, Timarpur, B1 Sub Division, DJB</string>
    <string name="clickToViewComplaint">Click the above link to view Complaints</string>
    <string name="getInTouch">Get in Touch</string>
    <string name="fsmEmail">Email</string>
    <string name="fsmPhone">Phone</string>
    <string name="fsmDepartmentsList">Departments List</string>
    <string name="fsmDept1">DJB</string>
    <string name="fsmDept2">MCD/ULB</string>
    <string name="fsmDept3">State Level Department</string>
    <string name="fsmDept4">National Level Department</string>
    <string name="leaders">Leaders</string>
    <string name="smartData">Smart Data</string>
    <string name="timeLine">Timeline</string>
</resources>