<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.next.eswaraj.fragments.ConstituencyInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/ciHousesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0099cc" />
                <TextView
                    android:id="@+id/cTotalHouses"
                    android:text="@string/ciHousesVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#808080" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/ciPopulationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0099cc" />
                <TextView
                    android:id="@+id/cTotalPopulation"
                    android:text="@string/ciPopulationVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#808080" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/ciMalePopLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0099cc" />
                <TextView
                    android:id="@+id/cTotalMalePopulation"
                    android:text="@string/ciMalePopVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#808080" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/ciFemalePopLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0099cc" />
                <TextView
                    android:id="@+id/cTotalFemalePopulation"
                    android:text="@string/ciFemalePop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#808080" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/ciLiteratePopLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0099cc" />
                <TextView
                    android:id="@+id/cTotalLiteratePopulation"
                    android:text="@string/ciLiteratePopVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#808080" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/ciMaleLiterateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0099cc" />
                <TextView
                    android:id="@+id/cTotalMaleLiteratePopulation"
                    android:text="@string/ciMaleLiterateVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#808080" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/ciFemaleLiterateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0099cc" />
                <TextView
                    android:id="@+id/cTotalFemaleLiteratePopulation"
                    android:text="@string/ciFemaleLiterateVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#808080" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/ciWorkingPopLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0099cc" />
                <TextView
                    android:id="@+id/cTotalWorkingPopulation"
                    android:text="@string/ciWorkingPopVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#808080" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/ciMaleWorkingPopLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0099cc" />
                <TextView
                    android:id="@+id/cTotalMaleWorkingPopulation"
                    android:text="@string/ciMaleWorkingPopVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#808080" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/ciFemaleWorkingPopLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0099cc" />
                <TextView
                    android:id="@+id/cTotalFemaleWorkingPopulation"
                    android:text="@string/ciFemaleWorkingPopVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#808080" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/ciAreaLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0099cc" />
                <TextView
                    android:id="@+id/cArea"
                    android:text="@string/ciAreaVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#808080" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:text="@string/ciPerimeterLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0099cc" />
                <TextView
                    android:id="@+id/cPerimeter"
                    android:text="@string/ciPerimeterVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#808080" />
            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>
